--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea 
 
 # Created by https://www.gitignore.io/api/java,maven,eclipse,netbeans,intellij
 # Edit at https://www.gitignore.io/?templates=java,maven,eclipse,netbeans,intellij
