--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>com.tdd.chat.Main</mainClass>
+                    <mainClass>com.tdd.chat.ProdMain</mainClass>
                 </configuration>
             </plugin>
         </plugins>
