--- a/pom.xml
+++ b/pom.xml
@@ -102,5 +102,10 @@
                 </configuration>
             </plugin>
         </plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.0</version>
+        </plugin>
     </build>
 </project>
